; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_remote.c_ref_to_update.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_remote.c_ref_to_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32 }

@GIT_BUF_INIT = common dso_local global %struct.TYPE_9__ zeroinitializer, align 4
@GIT_ENOTFOUND = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_9__*, i32*, i32*, i8*)* @ref_to_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ref_to_update(i32* %0, %struct.TYPE_9__* %1, i32* %2, i32* %3, i8* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_9__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca %struct.TYPE_9__, align 4
  %14 = alloca %struct.TYPE_9__, align 4
  store i32* %0, i32** %6, align 8
  store %struct.TYPE_9__* %1, %struct.TYPE_9__** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  store i8* %4, i8** %10, align 8
  store i32 0, i32* %11, align 4
  %15 = bitcast %struct.TYPE_9__* %13 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %15, i8* align 4 bitcast (%struct.TYPE_9__* @GIT_BUF_INIT to i8*), i64 4, i1 false)
  %16 = bitcast %struct.TYPE_9__* %14 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %16, i8* align 4 bitcast (%struct.TYPE_9__* @GIT_BUF_INIT to i8*), i64 4, i1 false)
  %17 = load i32*, i32** %8, align 8
  %18 = call i32* @git_remote_owner(i32* %17)
  store i32* %18, i32** %12, align 8
  %19 = load i8*, i8** %10, align 8
  %20 = call i32 @git_reference__is_branch(i8* %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %55

22:                                               ; preds = %5
  %23 = load i32*, i32** %8, align 8
  %24 = call i32 @git_remote_name(i32* %23)
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %55

26:                                               ; preds = %22
  %27 = load i32*, i32** %12, align 8
  %28 = load i8*, i8** %10, align 8
  %29 = call i64 @git_branch_upstream_remote(%struct.TYPE_9__* %13, i32* %27, i8* %28)
  %30 = icmp slt i64 %29, 0
  %31 = zext i1 %30 to i32
  store i32 %31, i32* %11, align 4
  br i1 %30, label %55, label %32

32:                                               ; preds = %26
  %33 = load i32*, i32** %8, align 8
  %34 = call i32 @git_remote_name(i32* %33)
  %35 = call i32 @git_buf_cstr(%struct.TYPE_9__* %13)
  %36 = call i64 @git__strcmp(i32 %34, i32 %35)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %55, label %38

38:                                               ; preds = %32
  %39 = load i32*, i32** %12, align 8
  %40 = load i8*, i8** %10, align 8
  %41 = call i32 @git_branch_upstream_name(%struct.TYPE_9__* %14, i32* %39, i8* %40)
  store i32 %41, i32* %11, align 4
  %42 = icmp slt i32 %41, 0
  br i1 %42, label %55, label %43

43:                                               ; preds = %38
  %44 = load i32*, i32** %9, align 8
  %45 = call i32 @git_buf_cstr(%struct.TYPE_9__* %14)
  %46 = call i32 @git_refspec_dst_matches(i32* %44, i32 %45)
  %47 = icmp ne i32 %46, 0
  br i1 %47, label %48, label %55

48:                                               ; preds = %43
  %49 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %50 = load i32*, i32** %9, align 8
  %51 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %14, i32 0, i32 0
  %52 = load i32, i32* %51, align 4
  %53 = call i32 @git_refspec_rtransform(%struct.TYPE_9__* %49, i32* %50, i32 %52)
  store i32 %53, i32* %11, align 4
  %54 = icmp slt i32 %53, 0
  br i1 %54, label %55, label %63

55:                                               ; preds = %48, %43, %38, %32, %26, %22, %5
  %56 = load i32, i32* %11, align 4
  %57 = load i32, i32* @GIT_ENOTFOUND, align 4
  %58 = icmp eq i32 %56, %57
  br i1 %58, label %59, label %61

59:                                               ; preds = %55
  %60 = call i32 (...) @git_error_clear()
  store i32 0, i32* %11, align 4
  br label %61

61:                                               ; preds = %59, %55
  %62 = load i32*, i32** %6, align 8
  store i32 0, i32* %62, align 4
  br label %65

63:                                               ; preds = %48
  %64 = load i32*, i32** %6, align 8
  store i32 1, i32* %64, align 4
  br label %65

65:                                               ; preds = %63, %61
  %66 = call i32 @git_buf_dispose(%struct.TYPE_9__* %13)
  %67 = call i32 @git_buf_dispose(%struct.TYPE_9__* %14)
  %68 = load i32, i32* %11, align 4
  ret i32 %68
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32* @git_remote_owner(i32*) #2

declare dso_local i32 @git_reference__is_branch(i8*) #2

declare dso_local i32 @git_remote_name(i32*) #2

declare dso_local i64 @git_branch_upstream_remote(%struct.TYPE_9__*, i32*, i8*) #2

declare dso_local i64 @git__strcmp(i32, i32) #2

declare dso_local i32 @git_buf_cstr(%struct.TYPE_9__*) #2

declare dso_local i32 @git_branch_upstream_name(%struct.TYPE_9__*, i32*, i8*) #2

declare dso_local i32 @git_refspec_dst_matches(i32*, i32) #2

declare dso_local i32 @git_refspec_rtransform(%struct.TYPE_9__*, i32*, i32) #2

declare dso_local i32 @git_error_clear(...) #2

declare dso_local i32 @git_buf_dispose(%struct.TYPE_9__*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
